# journal-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deny.toml  install.ps1  install.sh  journal
.github/workflows/: audit.yaml  ci.yaml  ci.yml  deny.yaml  release.yaml  release.yml
src/: app.rs  crypto.rs  input.rs  journal.rs  locale_map.rs  main.rs  ui.rs
src/app/: contact_form.rs  date_utils.rs  entries.rs  group_form.rs  mod.rs  settings_actions.rs
src/crypto/: shamir.rs
src/i18n/: de.rs  en.rs  mod.rs
src/model/: contact.rs  entry.rs  group.rs  journal.rs  mod.rs  settings.rs
src/ui/: auth.rs  contacts_tab.rs  dashboard_tab.rs  journal_tab.rs  mod.rs  modals.rs  settings_tab.rs  stats_tab.rs  theme.rs
src/ui/stats_tab/: helpers.rs  mod.rs  page_1.rs  page_10.rs  page_2.rs  page_3.rs  page_4.rs  page_5.rs  page_6.rs  page_7.rs  page_8.rs  page_9.rs
