[package]
name = "journal-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.45", features = ["serde"] }
crossterm = "0.29.0"
rand = "0.10.1"
ratatui = "0.30.1"
ratatui-textarea = "0.9.2"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
