[package]
name = "journal-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.11.0"
chrono = { version = "0.4.45", features = ["serde", "unstable-locales"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
sys-locale = "0.3.2"
rand = "0.10.1"
ratatui = "0.30.1"
ratatui-textarea = "0.9.2"
rpassword = "7.5.4"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
